usporadany gui prvky

--- a/src/templates/deleni.html
+++ b/src/templates/deleni.html
@@ -54,10 +54,6 @@
             </select>
         </div>
         
-        <div class="back-link">
-            <a href="/">&larr; Zpět na hlavní menu</a>
-        </div>
-        
         <div class="tabs">
             <button class="tab active" onclick="showTab('pocty')">Dosažitelná dělení</button>
             <button class="tab" onclick="showTab('deleni')">Výpočet děr pro dělení</button>
@@ -92,6 +88,9 @@
             </div>
         </div>
         
+        <div class="navigation" style="margin-top: 30px;">
+            <a href="/" class="back-link">← Zpět na hlavní stránku</a>
+        </div>
 
     </div>
 
