--- a/src/templates/differential.html
+++ b/src/templates/differential.html
@@ -34,10 +34,6 @@
 </head>
 <body>
     <div class="container">
-        <div class="back-link">
-            <a href="/">&larr; Zpět na hlavní menu</a>
-        </div>
-        
         <h1>Diferenciální závit - výpočty</h1>
         
         <div class="form-group">
@@ -56,6 +52,10 @@
         
         <div id="differential-results" class="results">
             <p>Zadejte požadované stoupání a klikněte na Vypočítat</p>
+        </div>
+        
+        <div class="navigation" style="margin-top: 30px;">
+            <a href="/" class="back-link">← Zpět na hlavní stránku</a>
         </div>
     </div>
 
