--- a/src/templates/division_plate.html
+++ b/src/templates/division_plate.html
@@ -29,10 +29,6 @@
     <div class="container">
         <h1>Dělicí kotouček</h1>
         
-        <div class="back-link">
-            <a href="/">&larr; Zpět na hlavní menu</a>
-        </div>
-        
         <div class="description">
             <p>Program spočítá průměr kotoučků které je potřeba naskladat kolem disku daného průměru aby se dosáhlo potřebného dělení bez použití dělicí hlavy. Středy kotoučků reprezentují pozice bodů.</p>
         </div>
@@ -51,6 +47,10 @@
         
         <div id="results" class="results">
             <p>Zadejte parametry a klikněte na Vypočítat</p>
+        </div>
+        
+        <div class="navigation" style="margin-top: 30px;">
+            <a href="/" class="back-link">← Zpět na hlavní stránku</a>
         </div>
     </div>
 
