--- a/src/templates/find_thread.html
+++ b/src/templates/find_thread.html
@@ -43,10 +43,6 @@
     <div class="container">
         <h1>Hledání závitů</h1>
         
-        <div class="back-link">
-            <a href="/">&larr; Zpět na hlavní menu</a>
-        </div>
-        
         <div class="description">
             <p>Vyhledá závity podle průměru nebo stoupání v databázi standardních závitů (metrické i palcové).</p>
         </div>
@@ -77,6 +73,10 @@
         
         <div id="results" class="results">
             <p>Zadejte parametry a klikněte na Hledat</p>
+        </div>
+        
+        <div class="navigation" style="margin-top: 30px;">
+            <a href="/" class="back-link">← Zpět na hlavní stránku</a>
         </div>
     </div>
 
