--- a/src/templates/material_bending.html
+++ b/src/templates/material_bending.html
@@ -36,10 +36,6 @@
         </div>
         <h1>Materiál na ohyb</h1>
         
-        <div class="back-link">
-            <a href="/">&larr; Zpět na hlavní menu</a>
-        </div>
-        
         <div class="description">
             <p>Výpočet délky materiálu potřebné pro ohyb podle tloušťky, poloměru a úhlu ohybu.</p>
         </div>
@@ -67,6 +63,10 @@
         
         <div id="results" class="results">
             <p>Zadejte parametry a klikněte na Vypočítat</p>
+        </div>
+        
+        <div class="navigation" style="margin-top: 30px;">
+            <a href="/" class="back-link">← Zpět na hlavní stránku</a>
         </div>
     </div>
 
