--- a/src/templates/shaft_surfaces.html
+++ b/src/templates/shaft_surfaces.html
@@ -34,10 +34,6 @@
     <div class="container">
         <h1>Výpočty ploch na hřídeli</h1>
         
-        <div class="back-link">
-            <a href="/">&larr; Zpět na hlavní menu</a>
-        </div>
-        
         <div class="description">
             <p>Výpočet hloubky řezu pro plochy a čtverce na hřídeli podle průměru a požadovaných rozměrů.</p>
         </div>
@@ -90,6 +86,10 @@
         
         <div id="results" class="results">
             <p>Vyberte typ výpočtu a zadejte parametry</p>
+        </div>
+        
+        <div class="navigation" style="margin-top: 30px;">
+            <a href="/" class="back-link">← Zpět na hlavní stránku</a>
         </div>
     </div>
 
