--- a/src/templates/knurling.html
+++ b/src/templates/knurling.html
@@ -32,10 +32,6 @@
     <div class="container">
         <h1>Vroubkování</h1>
         
-        <div class="back-link">
-            <a href="/">&larr; Zpět na hlavní menu</a>
-        </div>
-        
         <div class="description">
             <p>Výpočet parametrů vroubkování pro daný průměr kusu a rozteč vroubkovacích koleček.</p>
         </div>
@@ -65,6 +61,10 @@
         
         <div id="results" class="results">
             <p>Zadejte parametry a klikněte na Vypočítat</p>
+        </div>
+        
+        <div class="navigation" style="margin-top: 30px;">
+            <a href="/" class="back-link">← Zpět na hlavní stránku</a>
         </div>
     </div>
 
