--- a/src/templates/pulleys.html
+++ b/src/templates/pulleys.html
@@ -40,10 +40,6 @@
         </div>
         <h1>Řemenice</h1>
         
-        <div class="back-link">
-            <a href="/">&larr; Zpět na hlavní menu</a>
-        </div>
-        
         <div class="description">
             <p>Výpočty parametrů řemenic - otáčky, průměry a délka řemene.</p>
         </div>
@@ -100,6 +96,10 @@
         
         <div id="results" class="results">
             <p>Vyberte typ výpočtu a zadejte parametry</p>
+        </div>
+        
+        <div class="navigation" style="margin-top: 30px;">
+            <a href="/" class="back-link">← Zpět na hlavní stránku</a>
         </div>
     </div>
 
